comment update/ template literal

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
+  
   <title>M4 Challenge</title>
 </head>
 <body>
+
+  <main>
+    <div class="financial">
+<h1>
+  financial statement
+  </h1>
+  <button>please use the inspector to reach the console</button>
+    </div>
+  </main>
   <script src="index.js"></script>
 </body>
 </html>
